--- a/DielectricFitter/DielectricFitter.vcxproj.filters
+++ b/DielectricFitter/DielectricFitter.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="Parser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Fitowanie.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
