--- a/DielectricFitter/DielectricFitter.vcxproj
+++ b/DielectricFitter/DielectricFitter.vcxproj
@@ -84,6 +84,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\NOTES.md" />
+    <None Include="..\README.md" />
     <None Include="app.ico" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
