--- a/DielectricFitter/DielectricFitter.vcxproj.filters
+++ b/DielectricFitter/DielectricFitter.vcxproj.filters
@@ -19,6 +19,8 @@
     <None Include="app.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\NOTES.md" />
+    <None Include="..\README.md" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DielectricFitter.cpp">
