Chosen proper license
Chosing this particular license is as close to putting this piece of
software into public domain as one can get in my strange country.

--- a/DielectricFitter/DielectricFitter.vcxproj
+++ b/DielectricFitter/DielectricFitter.vcxproj
@@ -90,6 +90,7 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="About.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="DielectricFitter.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -98,6 +99,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="About.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Fitowanie.h" />
     <ClInclude Include="Form1.h">
       <FileType>CppForm</FileType>
@@ -113,6 +117,9 @@
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resX">
       <DependentUpon>Form1.h</DependentUpon>
       <SubType>Designer</SubType>
