--- a/DielectricFitter/DielectricFitter.vcxproj.filters
+++ b/DielectricFitter/DielectricFitter.vcxproj.filters
@@ -68,5 +68,8 @@
     <EmbeddedResource Include="Form1.resX">
       <Filter>Resource Files</Filter>
     </EmbeddedResource>
+    <EmbeddedResource Include="About.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
